code25_all/scala/13008792.txt
test1.scala
package test
import java.io.FileInputStream
object Foo 

test2.scala
package test.java
object Bar 

scalac test1.scala test2.scala
test.scala:2: error: object io is not a member of package test.java
import java.io.FileInputStream
            ^
one error found

java
test.java
